--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,13 +1,17 @@
 .navbar {
-    background-color: rgb(134, 57, 206);
-    color: rgb(255, 238, 253);
+	background-color: rgb(134, 57, 206);
+	color: rgb(255, 238, 253);
 }
 
 .btn-color {
-    background-color: rgb(8, 8, 109);
-    color: rgb(255, 238, 253);
+	background-color: rgb(8, 8, 109);
+	color: rgb(255, 238, 253);
 }
 
 #steve-image {
-    height: 500px;
+	height: 300px;
+}
+
+#advice-block {
+	margin-bottom: 20px;
 }
